--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "author": "Shu Ding",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^10.4.7",
     "next": "^12.1.0",
-    "nextra": "^1.1.0",
-    "nextra-theme-docs": "^1.2.2",
+    "nextra": "beta",
+    "nextra-theme-docs": "beta",
+    "postcss": "^8.4.13",
+    "prism-react-renderer": "^1.3.1",
+    "prismjs": "^1.28.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
