--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "autoprefixer": "^10.4.7",
     "next": "^12.1.0",
-    "nextra": "beta",
-    "nextra-theme-docs": "beta",
+    "nextra": "^1.1.0",
+    "nextra-theme-docs": "^1.1.0",
     "postcss": "^8.4.13",
     "prism-react-renderer": "^1.3.1",
     "prismjs": "^1.28.0",
