--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "dev": "next",
     "start": "next start",
-    "build": "next build"
+    "build": "next build",
+    "fmt": "prettier -w ./pages"
   },
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^10.4.7",
     "next": "^12.1.0",
-    "nextra": "^1.1.0",
-    "nextra-theme-docs": "^1.1.0",
+    "nextra": "beta",
+    "nextra-theme-docs": "beta",
     "postcss": "^8.4.13",
     "prism-react-renderer": "^1.3.1",
     "prismjs": "^1.28.0",
